--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
+    "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^6.4.2"
   },
   "devDependencies": {
